admission/validatingAdmissionPolicies/policies/pod-template-labels/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: violating-pod-template-labels
  namespace: policy-test
spec:
  containers:
  - name: main
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
