admission/validatingAdmissionPolicies/policies/pod-template-labels/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: pod-template-labels-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d0486c50-071d-570c-8bf9-8506f9b9dd53
  labels:
    check-pod-template-labels.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/warn: enabled
    check-pod-template-labels.security.kolteq.com/audit: 'false - true'
    check-pod-template-labels.security.kolteq.com/enforce: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: pod-template-labels
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-pod-template-labels.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: pod-template-labels-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d0486c50-071d-570c-8bf9-8506f9b9dd53
  labels:
    check-pod-template-labels.security.kolteq.com/warn: 'false - true'
    check-pod-template-labels.security.kolteq.com/audit: 'false - true'
    check-pod-template-labels.security.kolteq.com/enforce: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: pod-template-labels
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-pod-template-labels.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: pod-template-labels-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d0486c50-071d-570c-8bf9-8506f9b9dd53
  labels:
    check-pod-template-labels.security.kolteq.com/audit: 'false - true'
    security.kolteq.com/audit: enabled
    check-pod-template-labels.security.kolteq.com/enforce: 'false - true'
    check-pod-template-labels.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: pod-template-labels
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-pod-template-labels.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: pod-template-labels-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d0486c50-071d-570c-8bf9-8506f9b9dd53
  labels:
    check-pod-template-labels.security.kolteq.com/audit: 'false - true'
    check-pod-template-labels.security.kolteq.com/enforce: 'false - true'
    check-pod-template-labels.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: pod-template-labels
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-pod-template-labels.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: pod-template-labels-namespace-optout-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d0486c50-071d-570c-8bf9-8506f9b9dd53
  labels:
    check-pod-template-labels.security.kolteq.com/enforce: 'false - true'
    security.kolteq.com/enforce: enabled
    check-pod-template-labels.security.kolteq.com/audit: 'false - true'
    check-pod-template-labels.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: pod-template-labels
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-pod-template-labels.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: pod-template-labels-namespace-optin-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d0486c50-071d-570c-8bf9-8506f9b9dd53
  labels:
    check-pod-template-labels.security.kolteq.com/enforce: 'false - true'
    check-pod-template-labels.security.kolteq.com/audit: 'false - true'
    check-pod-template-labels.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: pod-template-labels
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-pod-template-labels.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
