admission/validatingAdmissionPolicies/policies/pod-template-labels/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: pod-template-labels
  annotations:
    security.kubeapt.io/displayName: 'Pod Template Labels'
    security.kubeapt.io/description: Pods must set metadata.labels (non-empty) for policy targeting.
    security.kubeapt.io/resource: Pods
    security.kubeapt.io/severity: "3"
    security.kubeapt.io/remediation: "Add at least one label to metadata.labels. Fields: metadata.labels."
    policies.kolteq.com/validatingAdmissionPolicy: d0486c50-071d-570c-8bf9-8506f9b9dd53
  labels:
    check-pod-template-labels.security.kolteq.com/audit: 'false,true'
    check-pod-template-labels.security.kolteq.com/enforce: 'false,true'
    check-pod-template-labels.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validations:
  - expression: |
      has(object.metadata.labels) && size(object.metadata.labels) > 0
    message: |
      Pods must set metadata.labels (non-empty) for policy targeting.
